# crewai-agent

./: .env  README.md  app.py  pyproject.toml  requirements.txt
src/crewai_agent/: __init__.py  main.py
src/crewai_agent/crews/: teaching_crew.py
src/crewai_agent/crews/config/: agents.yaml  tasks.yaml
